--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -69,7 +69,7 @@ This page links to resources that might be interesting or useful during class. *
 
 - The Verizon [**Data Breach Investigation Report**](https://www.verizon.com/business/resources/reports/dbir/) is a great resource to help you know about what threats are out there.
 
-- Books (not Manga) we discussed or that came up during class discussion:
+- Books (not Manga!) we discussed or that came up during class discussion:
     - [**The Age of Survelliance Capitalism**](https://bookshop.org/p/books/the-age-of-surveillance-capitalism-the-fight-for-a-human-future-at-the-new-frontier-of-power-shoshana-zuboff/9240225?ean=9781541758001)
     - [**Privacy is Power**](https://bookshop.org/p/books/privacy-is-power-why-and-how-you-should-take-back-control-of-your-data-carissa-veliz/15315465?ean=9781612199672)
     - [**The Cyber Effect**](https://bookshop.org/p/books/the-cyber-effect-an-expert-in-cyberpsychology-explains-how-technology-is-shaping-our-children-our-behavior-and-our-values-and-what-w-mary-aiken/11742110?ean=9780812987478)
@@ -78,7 +78,7 @@ This page links to resources that might be interesting or useful during class. *
 #### Some of the contents of my "daily" folder 
 - [**CyberScoop**](https://cyberscoop.com/) - general-purpose cyber news
 - [**Fierce Telecom**](https://www.fiercetelecom.com/) - some telecom, some IT
-- [**SDX Central**](https://www.sdxcentral.com/) - good moderately-technical rundown of current evens in the SD Networking world
+- [**SDX Central**](https://www.sdxcentral.com/) - good moderately-technical rundown of current events in the SD Networking world
 - [**The Register**](https://www.theregister.com/) - cheeky British security writing
 - [**Krebs on Security**](https://krebsonsecurity.com/) - Brian Krebs' in-depth reporting on security issues
 - [**Schneier on Security**](https://www.schneier.com/) - Bruce Schneier is a legend in security. His site goes deep. He likes squids.
