add analytics to head.html only

--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -7,4 +7,4 @@ This page links to resources that might be interesting or useful during class. *
 
 ### Monday July 13
 
-- Just to whet your whistle, [**Here's an interesting story**](https://www.fortra.com/blog/safepay-ransomware-what-you-need-know) about Safepay Ransomware, one of the scarier and more active ransomware groups in current activity. The question for us is *How could a small bank protect themselves against a crew like this?* 
+- Just to whet your whistle, [**Here's an interesting story**](https://www.fortra.com/blog/safepay-ransomware-what-you-need-know) about Safepay Ransomware, one of the scarier and more active ransomware groups in current activity. The question for us is: *How could a small bank protect themselves against a crew like this?* 
