--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -25,3 +25,4 @@ This page links to resources that might be interesting or useful during class. *
 
 - To tell the truth, the awesome world in which [we don't need username/password combos](https://fidoalliance.org/passkeys/) is taking a long time to arrive. I'm not sure who to blame, but this guy [has some ideas](https://www.corbado.com/blog/passkey-troubleshooting-solutions). It's a technical article, but worth skimming the headlines.
 
+- If a bank hasn't deployed MFA yet, they're not getting the message. Here's one [way to convince](https://www.covrsecurity.com/three-simple-advice-to-convince-your-users-of-the-benefits-of-mfa/) and [here's another](https://saasalerts.com/the-case-for-mfa-implementation/). Once you've done that, you can convince them to [stop using SMS](https://cyberessentials.substack.com/p/should-you-stop-using-sms-in-mfa) as the 2nd factor... Good luck! 
