--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -21,8 +21,8 @@ This page links to resources that might be interesting or useful during class. *
 
 - The Verizon [**Data Breach Investigation Report**](https://www.verizon.com/business/resources/reports/dbir/) is a great resource to help you know about what threats are out there.
 
-- It's a little old, but this is [Great Article on the need for post-quantum cryptography](https://www.nsa.gov/Press-Room/Press-Releases-Statements/Press-Release-View/Article/3498776/post-quantum-cryptography-cisa-nist-and-nsa-recommend-how-to-prepare-now/). 
+- It's a little old, but this is [**great article on the need for post-quantum cryptography**](https://www.nsa.gov/Press-Room/Press-Releases-Statements/Press-Release-View/Article/3498776/post-quantum-cryptography-cisa-nist-and-nsa-recommend-how-to-prepare-now/). 
 
-- To tell the truth, the awesome world in which [we don't need username/password combos](https://fidoalliance.org/passkeys/) is taking a long time to arrive. I'm not sure who to blame, but this guy [has some ideas](https://www.corbado.com/blog/passkey-troubleshooting-solutions). It's a technical article, but worth skimming the headlines.
+- To tell the truth, the awesome world in which [**we don't need username/password combos**](https://fidoalliance.org/passkeys/) is taking a long time to arrive. I'm not sure who to blame, but this guy [**has some ideas**](https://www.corbado.com/blog/passkey-troubleshooting-solutions). It's a technical article, but worth skimming the headlines.
 
-- If a bank hasn't deployed MFA yet, they're not getting the message. Here's one [way to convince](https://www.covrsecurity.com/three-simple-advice-to-convince-your-users-of-the-benefits-of-mfa/) and [here's another](https://saasalerts.com/the-case-for-mfa-implementation/). Once you've done that, you can convince them to [stop using SMS](https://cyberessentials.substack.com/p/should-you-stop-using-sms-in-mfa) as the 2nd factor... Good luck! 
+- If a bank hasn't deployed MFA yet, they're not getting the message. Here's one [**way to convince**](https://www.covrsecurity.com/three-simple-advice-to-convince-your-users-of-the-benefits-of-mfa/) and [**here's another**](https://saasalerts.com/the-case-for-mfa-implementation/). Once you've done that, you can convince them to [**stop using SMS**](https://cyberessentials.substack.com/p/should-you-stop-using-sms-in-mfa) as the 2nd factor... Good luck! 
