--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -9,6 +9,14 @@ This page links to resources that might be interesting or useful during class. *
 
 - Just to whet your whistle, [**Here's an interesting story**](https://www.fortra.com/blog/safepay-ransomware-what-you-need-know) about Safepay Ransomware, one of the scarier and more active ransomware groups in current activity. The question for us is: *How could a small bank protect themselves against a crew like this?* 
 
+- The Verizon [**Data Breach Investigation Report**](https://www.verizon.com/business/resources/reports/dbir/) is a great resource to help you know about what threats are out there.
+
+- It's a little old, but this is [**great article on the need for post-quantum cryptography**](https://www.nsa.gov/Press-Room/Press-Releases-Statements/Press-Release-View/Article/3498776/post-quantum-cryptography-cisa-nist-and-nsa-recommend-how-to-prepare-now/). 
+
+- To tell the truth, the awesome world in which [**we don't need username/password combos**](https://fidoalliance.org/passkeys/) is taking a long time to arrive. I'm not sure who to blame, but this guy [**has some ideas**](https://www.corbado.com/blog/passkey-troubleshooting-solutions). It's a technical article, but worth skimming the headlines.
+
+- If a bank hasn't deployed MFA yet, they're not getting the message. Here's one [**way to convince**](https://www.covrsecurity.com/three-simple-advice-to-convince-your-users-of-the-benefits-of-mfa/) and [**here's another**](https://saasalerts.com/the-case-for-mfa-implementation/). Once you've done that, you can convince them to [**stop using SMS**](https://cyberessentials.substack.com/p/should-you-stop-using-sms-in-mfa) as the 2nd factor... Good luck! 
+
 #### Some of the contents of my "daily" folder 
 - [**CyberScoop**](https://cyberscoop.com/) - general-purpose cyber news
 - [**Fierce Telecom**](https://www.fiercetelecom.com/) - some telecom, some IT
@@ -19,10 +27,6 @@ This page links to resources that might be interesting or useful during class. *
 - [**Data Breach Today**](https://www.databreachtoday.com/) - what bad things happened yesterday
 - [**Bleeping Computer**](https://www.bleepingcomputer.com/) - consumer (client) focus on computer problems
 
-- The Verizon [**Data Breach Investigation Report**](https://www.verizon.com/business/resources/reports/dbir/) is a great resource to help you know about what threats are out there.
+### Tuesday July 14
 
-- It's a little old, but this is [**great article on the need for post-quantum cryptography**](https://www.nsa.gov/Press-Room/Press-Releases-Statements/Press-Release-View/Article/3498776/post-quantum-cryptography-cisa-nist-and-nsa-recommend-how-to-prepare-now/). 
 
-- To tell the truth, the awesome world in which [**we don't need username/password combos**](https://fidoalliance.org/passkeys/) is taking a long time to arrive. I'm not sure who to blame, but this guy [**has some ideas**](https://www.corbado.com/blog/passkey-troubleshooting-solutions). It's a technical article, but worth skimming the headlines.
-
-- If a bank hasn't deployed MFA yet, they're not getting the message. Here's one [**way to convince**](https://www.covrsecurity.com/three-simple-advice-to-convince-your-users-of-the-benefits-of-mfa/) and [**here's another**](https://saasalerts.com/the-case-for-mfa-implementation/). Once you've done that, you can convince them to [**stop using SMS**](https://cyberessentials.substack.com/p/should-you-stop-using-sms-in-mfa) as the 2nd factor... Good luck! 
