--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -9,7 +9,9 @@ This page links to resources that might be interesting or useful during class. *
 
 - Just to whet your whistle, [**Here's an interesting story**](https://www.fortra.com/blog/safepay-ransomware-what-you-need-know) about Safepay Ransomware, one of the scarier and more active ransomware groups in current activity. The question for us is: *How could a small bank protect themselves against a crew like this?* 
 
-- The Verizon [**Data Breach Investigation Report**](https://www.verizon.com/business/resources/reports/dbir/) is a great resource to help you know about what threats are out there.
+- Despite the sunsetting of the CAT, there are still great resources to guide banks (and you) when thinking about Cybersecurity. One is the [**FFIEC Cybersecurity Awareness**](https://www.ffiec.gov/resources/cybersecurity-awareness) website, another is the [**NIST Cybersecurity Framework**](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.) we've talked about the last couple days. 
+
+- The Verizon [**Data Breach Investigation Report**](https://www.verizon.com/business/resources/reports/dbir/) is a great resource to help you know about what threats are out there. [**Crowdstrike**](https://www.crowdstrike.com/en-us/global-threat-report/) also has something similar.
 
 - It's a little old, but this is [**great article on the need for post-quantum cryptography**](https://www.nsa.gov/Press-Room/Press-Releases-Statements/Press-Release-View/Article/3498776/post-quantum-cryptography-cisa-nist-and-nsa-recommend-how-to-prepare-now/). 
 
@@ -19,11 +21,10 @@ This page links to resources that might be interesting or useful during class. *
 
 #### Some of the contents of my "daily" folder 
 - [**CyberScoop**](https://cyberscoop.com/) - general-purpose cyber news
-- [**Fierce Telecom**](https://www.fiercetelecom.com/) - some telecom, some IT
 - [**SDX Central**](https://www.sdxcentral.com/) - good moderately-technical rundown of current events in the SD Networking world
 - [**The Register**](https://www.theregister.com/) - cheeky British security writing
 - [**Krebs on Security**](https://krebsonsecurity.com/) - Brian Krebs' in-depth reporting on security issues
-- [**Schneier on Security**](https://www.schneier.com/) - Bruce Schneier is a legend in security. His site goes deep. He likes squids.
+- [**Schneier on Security**](https://www.schneier.com/) - Bruce Schneier is a legend. His site goes deep. He likes squids, too.
 - [**Data Breach Today**](https://www.databreachtoday.com/) - what bad things happened yesterday
 - [**Bleeping Computer**](https://www.bleepingcomputer.com/) - consumer (client) focus on computer problems
 
