--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -9,7 +9,7 @@ This page links to resources that might be interesting or useful during class. *
 
 - Just to whet your whistle, [**Here's an interesting story**](https://www.fortra.com/blog/safepay-ransomware-what-you-need-know) about Safepay Ransomware, one of the scarier and more active ransomware groups in current activity. The question for us is: *How could a small bank protect themselves against a crew like this?* 
 
-- Despite the sunsetting of the CAT, there are still great resources to guide banks (and you) when thinking about Cybersecurity. One is the [**FFIEC Cybersecurity Awareness**](https://www.ffiec.gov/resources/cybersecurity-awareness) website, another is the [**NIST Cybersecurity Framework**](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.) we've talked about the last couple days. 
+- Despite the sunsetting of the CAT, there are still great resources to guide banks (and you) when thinking about Cybersecurity. One is the [**FFIEC Cybersecurity Awareness**](https://www.ffiec.gov/resources/cybersecurity-awareness) website, another is the [**NIST Cybersecurity Framework**](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.1301.pdf) we've talked about the last couple days. The link goes to the quick start guide. 
 
 - The Verizon [**Data Breach Investigation Report**](https://www.verizon.com/business/resources/reports/dbir/) is a great resource to help you know about what threats are out there. [**Crowdstrike**](https://www.crowdstrike.com/en-us/global-threat-report/) also has something similar.
 
@@ -29,5 +29,8 @@ This page links to resources that might be interesting or useful during class. *
 - [**Bleeping Computer**](https://www.bleepingcomputer.com/) - consumer (client) focus on computer problems
 
 ### Tuesday July 14
+
+
+
 
 
