--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -36,7 +36,7 @@ This page links to resources that might be interesting or useful during class. *
 
 - Salt Security has a good [**API Security Explainer**](https://salt.security/api-security-101) for beginners, it's very worth a look.
 
-- Nobody needs [**19 Ways to Build Zero Trust Architectures**](https://www.nist.gov/news-events/news/2025/06/nist-offers-19-ways-build-zero-trust-architectures), but this is still a good guide to the overall idea, with useful links to learn more. Also, a quick google of the term "Zero Trust" will yield about a million companies eager to help you by selling you stuff. [Some of these](https://www.splunk.com/en_us/form/the-essential-guide-to-zero-trust.html?device=c&_bt=71331022744964&_bm=e&msclkid=b65822b36cc9185914744ac5eff6780e) are pretty good (of course you must give up an email), others, less so.
+- Nobody needs [**19 Ways to Build Zero Trust Architectures**](https://www.nist.gov/news-events/news/2025/06/nist-offers-19-ways-build-zero-trust-architectures), but this is still a good guide to the overall idea, with useful links to learn more. Also, a quick google of the term "Zero Trust" will yield about a million companies eager to help you by selling you stuff. [Some of these](https://www.splunk.com/en_us/form/the-essential-guide-to-zero-trust.html?device=c&_bt=71331022744964&_bm=e&msclkid=b65822b36cc9185914744ac5eff6780e) are pretty good (of course you must give up an email), others, less so. Also, I don't know who these folks are but at first glance I like their [**ZTA Cheat Sheet**](https://cheatsheetseries.owasp.org/cheatsheets/Zero_Trust_Architecture_Cheat_Sheet.html).
 
 - Speaking of penetration of the physical layer, here's a link to [**the Stuxnet movie** called Zero Days](https://www.amazon.com/Zero-Days-Colonel-Gary-Brown/dp/B01I2C0UV6) that we discussed (it's on Amazon Prime). It proves you don't need network access to get malware into a system if you have USB drives and some creativity. A crazy espionage story.
 
