--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -42,7 +42,9 @@ This page links to resources that might be interesting or useful during class. *
 
 - Mat (sic) Honan got hacked, but he says [**it wasn't all his fault**](https://www.wired.com/2012/08/apple-amazon-mat-honan-hacking/). Actually, he does fess up in the text, just not the headline.
 
+- Cryptocurrency is way beyond our remit this week, but fair winds are blowing for it, and banks will get involved. You should understand at least a bit about it, but it's complicated and filled with shysters. Here are a few resources to begin getting up to speed:
 
-- https://www.coinbase.com/learn/crypto-basics/what-is-cryptocurrency
-- https://www.tastycrypto.com/basics/cryptocurrency-for-beginners/
+  - [**An explainer from the ubiquitous Coinbase**](https://www.coinbase.com/learn/crypto-basics/what-is-cryptocurrency)
+  - This company has a [**silly name**](https://www.tastycrypto.com/basics/cryptocurrency-for-beginners/), but I kinda like their explanation of the tech.
+  - I have never loved the "for dummies" construction, but [**Introduction and Overview**](https://www.cloudwards.net/crypto-for-dummies/) of how it works is pretty good.
 
