--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -46,5 +46,5 @@ This page links to resources that might be interesting or useful during class. *
 
   - [**An explainer from the ubiquitous Coinbase**](https://www.coinbase.com/learn/crypto-basics/what-is-cryptocurrency)
   - This company has a [**silly name**](https://www.tastycrypto.com/basics/cryptocurrency-for-beginners/), but I kinda like their explanation of the tech.
-  - I have never loved the "for dummies" construction, but [**Introduction and Overview**](https://www.cloudwards.net/crypto-for-dummies/) of how it works is pretty good.
+  - I have never loved the "for dummies" construction, but this [**Introduction and Overview**](https://www.cloudwards.net/crypto-for-dummies/) of how it works from Cloudwards is pretty good.
 
