--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -50,4 +50,4 @@ This page links to resources that might be interesting or useful during class. *
 
 ### Wednesday July 15
 
-- I briefly discussed [**Chokepoints**], by Edward Fishman, (https://bookshop.org/p/books/chokepoints-american-power-in-the-age-of-economic-warfare-edward-fishman/21504653?ean=9780593712979&next=t) with Unique, and thought it might have resonance with others as well.
+- I briefly discussed [**Chokepoints**](https://bookshop.org/p/books/chokepoints-american-power-in-the-age-of-economic-warfare-edward-fishman/21504653?ean=9780593712979&next=t), by Edward Fishman, with Unique, and thought it might have resonance with others as well - particularly those interested in the application of finance to American power overseas.
