--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -51,3 +51,11 @@ This page links to resources that might be interesting or useful during class. *
 ### Wednesday July 15
 
 - I briefly discussed [**Chokepoints**](https://bookshop.org/p/books/chokepoints-american-power-in-the-age-of-economic-warfare-edward-fishman/21504653?ean=9780593712979&next=t), by Edward Fishman, with Unique, and thought it might have resonance with others as well - particularly those interested in the application of finance to American power overseas.
+
+- Don't forget [**HTTP forever**](http://httpforever.com/), perhaps the only site that will never be secure.
+
+- Cloudflare has a great explainer on [**Public Key Cryptography**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) and some other crypto things.
+
+- Max mentioned this site [**Fintech Weekly**](https://www.fintechweekly.com/) that I hadn't heard of before. Gotta say it looks interesting.
+
+- 
