--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -42,7 +42,7 @@ This page links to resources that might be interesting or useful during class. *
 
 - Mat (sic) Honan got hacked, but he says [**it wasn't all his fault**](https://www.wired.com/2012/08/apple-amazon-mat-honan-hacking/). Actually, he does fess up in the text, just not the headline.
 
-- Cryptocurrency is way beyond our remit this week, but fair winds are blowing for it, and banks will get involved. You should understand at least a bit about it, but it's complicated and filled with shysters. Here are a few resources to begin getting up to speed:
+- Cryptocurrency is way beyond our remit this week, but fair winds are blowing, and banks will get involved. You should understand at least a bit about it, but it's complicated and filled with shysters. Here are a few resources to begin getting up to speed:
 
   - [**An explainer from the ubiquitous Coinbase**](https://www.coinbase.com/learn/crypto-basics/what-is-cryptocurrency)
   - This company has a [**silly name**](https://www.tastycrypto.com/basics/cryptocurrency-for-beginners/), but I kinda like their explanation of the tech.
@@ -58,4 +58,6 @@ This page links to resources that might be interesting or useful during class. *
 
 - Max mentioned this site [**Fintech Weekly**](https://www.fintechweekly.com/) that I hadn't heard of before. Gotta say it looks interesting.
 
-- 
+- If you're interested Mike's story from this morning, I'm guessing that the bank is likely using one of the pieces of mining software [**described in thie Forbes article**](https://www.forbes.com/advisor/investing/cryptocurrency/best-bitcoin-mining-software/). Make sure you read the part at the bottom about investments in hardware and power, and the section titled "How Profitable Is Bitcoin Mining?" Not for the faint of heart...
+
+
