--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -56,8 +56,11 @@ This page links to resources that might be interesting or useful during class. *
 
 - Cloudflare has a great explainer on [**Public Key Cryptography**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) and some other crypto things.
 
-- Max mentioned this site [**Fintech Weekly**](https://www.fintechweekly.com/) that I hadn't heard of before. Gotta say it looks interesting.
+- Max mentioned [**Fintech Weekly**](https://www.fintechweekly.com/), a site that I hadn't heard of before. Gotta say it looks interesting.
 
 - If you're interested Mike's story from this morning, I'm guessing that the bank is likely using one of the pieces of mining software [**described in thie Forbes article**](https://www.forbes.com/advisor/investing/cryptocurrency/best-bitcoin-mining-software/). Make sure you read the part at the bottom about investments in hardware and power, and the section titled "How Profitable Is Bitcoin Mining?" Not for the faint of heart...
+
+### Thursday July 16
+
 
 
