--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -62,5 +62,5 @@ This page links to resources that might be interesting or useful during class. *
 
 ### Thursday July 16
 
-- We talked a bit about password managers. I use [**1Password**](https://1password.com/) and think they're pretty good. There are many others, and theyh're just a quick Google away, so look for yourself - but [**be careful**](https://www.zdnet.com/article/lastpass-hacked/). Honestly though - that's an awful story, but you must do better than Notes or Notepad for this.
+- We talked a bit about password managers. I use [**1Password**](https://1password.com/) and think they're pretty good. There are many others, and they're just a quick Google away, so look for yourself - but [**be careful**](https://www.zdnet.com/article/lastpass-hacked/). Honestly though - that's an awful story, but you really should do better than Notes or Notepad for this.
 
