--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -64,3 +64,7 @@ This page links to resources that might be interesting or useful during class. *
 
 - We talked a bit about password managers. I use [**1Password**](https://1password.com/) and think they're pretty good, and are only $36/yr for individuals, $60/yr for a "family" of 5. There are many others a quick Google away, so look for yourself - but [**be careful**](https://www.zdnet.com/article/lastpass-hacked/). Honestly though - that's an awful story, but you really should do better than Notes or Notepad for this.
 
+- Here's that [**Spectrum MNE video**](https://boingit.com/MNE10.mp4) in case you want another look at that.
+
+
+
