--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -68,3 +68,11 @@ This page links to resources that might be interesting or useful during class. *
 
 - You can play with routers, firewalls, and lots more at the [**Sonicwall Live Demo site**](https://livedemo.sonicwall.com/).
 
+
+### MSSP Exercise
+
+- Table 1: [**SBS Cybersecurity**](https://sbscyber.com/)
+- Table 2: [**Arraya Solutions**](https://www.arrayasolutions.com/)
+- Table 3: [**Palo Alto Unit 42**](https://www.paloaltonetworks.com/unit42)
+- Table 4: [**Optiv**](https://www.optiv.com/)
+- Table 5: [**SilverSky**](https://www.silversky.com/)
