--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -68,6 +68,7 @@ This page links to resources that might be interesting or useful during class. *
 
 - You can play with routers, firewalls, and lots more at the [**Sonicwall Live Demo site**](https://livedemo.sonicwall.com/).
 
+### Friday July 17
 
 ### MSSP Exercise
 
@@ -76,3 +77,6 @@ This page links to resources that might be interesting or useful during class. *
 - Table 3: [**Palo Alto Unit 42**](https://www.paloaltonetworks.com/unit42)
 - Table 4: [**Optiv**](https://www.optiv.com/)
 - Table 5: [**SilverSky**](https://www.silversky.com/)
+
+- Remember SSL Labs and their [**SSL Server Test**](https://www.ssllabs.com/ssltest/) page. You can use it to test any server to see how secure it is! A great, free service that anyone can use, even if you're not a geek.
+
