--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -70,13 +70,13 @@ This page links to resources that might be interesting or useful during class. *
 
 ### Friday July 17
 
-### MSSP Exercise
+- [**MSSP Exercise**]
 
-- Table 1: [**SBS Cybersecurity**](https://sbscyber.com/)
-- Table 2: [**Arraya Solutions**](https://www.arrayasolutions.com/)
-- Table 3: [**Palo Alto Unit 42**](https://www.paloaltonetworks.com/unit42)
-- Table 4: [**Optiv**](https://www.optiv.com/)
-- Table 5: [**SilverSky**](https://www.silversky.com/)
+  - Table 1: [**SBS Cybersecurity**](https://sbscyber.com/)
+  - Table 2: [**Arraya Solutions**](https://www.arrayasolutions.com/)
+  - Table 3: [**Palo Alto Unit 42**](https://www.paloaltonetworks.com/unit42)
+  - Table 4: [**Optiv**](https://www.optiv.com/)
+  - Table 5: [**SilverSky**](https://www.silversky.com/)
 
 - Remember SSL Labs and their [**SSL Server Test**](https://www.ssllabs.com/ssltest/) page. You can use it to test any server to see how secure it is! A great, free service that anyone can use, even if you're not a geek.
 
