--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -5,6 +5,8 @@ title: "July 13-17, 2025 - FDIC Introduction to Security"
 
 This page links to resources that might be interesting or useful during class. **It's not an assignment and nothing here is required reading.** But as we move through the week, I'll post links related to class topics, assignments, and other interesting nuggets.
 
+- Here's a link to the [**updated Powerpoint deck**](https://class.hillvt.com/assets/Intro-security.pptx).
+
 ### Monday July 13
 
 - Just to whet your whistle, [**Here's an interesting story**](https://www.fortra.com/blog/safepay-ransomware-what-you-need-know) about Safepay Ransomware, one of the scarier and more active ransomware groups in current activity. The question for us is: *How could a small bank protect themselves against a crew like this?* 
