--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -82,3 +82,5 @@ This page links to resources that might be interesting or useful during class. *
 
 - Remember SSL Labs and their [**SSL Server Test**](https://www.ssllabs.com/ssltest/) page. You can use it to test any server to see how secure it is! A great, free service that anyone can use, even if you're not a geek.
 
+- I muddied the waters a bit yesterday by mentioning ZTNA again, so to atone, I'm here providing you with the [**official NIST Zero Trust Architecture**](https://csrc.nist.gov/pubs/sp/800/207/final). It's a toughie - you might not want to read it, but the front-page abstract is pretty good.
+
