--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -84,3 +84,5 @@ This page links to resources that might be interesting or useful during class. *
 
 - I muddied the waters a bit yesterday by mentioning ZTNA again, so to atone, I'm here providing you with the [**official NIST Zero Trust Architecture**](https://csrc.nist.gov/pubs/sp/800/207/final). It's a toughie - you might not want to read the whole thing, but the front-page abstract is pretty accessible.
 
+- Here's the [**NIST AI Risk Management Framework (AI RMF)**](https://www.nist.gov/itl/ai-risk-management-framework) we learned about from the slides. I haven't read it yet but I will - probably on the plane home.
+
