--- a/_posts/2025-07-08-FDIC-ITS.md
+++ b/_posts/2025-07-08-FDIC-ITS.md
@@ -70,6 +70,8 @@ This page links to resources that might be interesting or useful during class. *
 
 - You can play with routers, firewalls, and lots more at the [**Sonicwall Live Demo site**](https://livedemo.sonicwall.com/).
 
+- Here's that pic of my son and me [**preparing to destroy hard drives**](https://class.hillvt.com/assets/IMG_0982.jpg) for operational security when we moved house in Beijing.
+
 ### Friday July 17
 
 - **MSSP Exercise**
