--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -9,6 +9,5 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 ### Monday August 25
 
-- How many banks have you visited that have Cisco devices securing their internet connection? [**This little problem**](https://www.bleepingcomputer.com/news/security/over-10-000-cisco-devices-hacked-in-ios-xe-zero-day-attacks/) apparently only affects the Cisco OS version called IOS XE. You might add a check for that (and the patch) to your exam checklist.
-- As we will see, firewalls and other security elements are themselves [**continually under attack**](https://www.databreachtoday.com/cisco-fixes-firewall-0-days-after-likely-nation-state-hack-a-24934). This is just one recent example that could compromise community banks given the type of device targeted. 
+- If there's anything examiners know, it's that having a plan is important. It's good to learn that [**Microsoft knows it too**](https://cyberscoop.com/microsoft-threat-intel-response-tips/).
 - Here's another [**a bit of easy pre-reading**](https://www.sayers.com/articles/the-future-of-firewalls-engineering-experts-reveal-the-path-ahead/) if you'd like to see where we're headed.
