first commit for Aug 25 DIIF

--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -9,5 +9,5 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 ### Monday August 25
 
-- If there's anything examiners know, it's that having a plan is important. It's good to learn that [**Microsoft knows it too**](https://cyberscoop.com/microsoft-threat-intel-response-tips/).
+- If there's anything examiners know, it's that having a plan is important. It's good to learn that [**Microsoft knows this too**](https://cyberscoop.com/microsoft-threat-intel-response-tips/).
 - Here's another [**a bit of easy pre-reading**](https://www.sayers.com/articles/the-future-of-firewalls-engineering-experts-reveal-the-path-ahead/) if you'd like to see where we're headed.
