--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "August 25, 2025 - FDIC Deploying Internet and Intranet Firewalls"
+title:  "August 25-27, 2025 - FDIC Deploying Internet and Intranet Firewalls"
 ---
 
 This page links to resources that might be interesting or useful during class. It's not an assignment and nothing here is required reading. As we move through the week, I'll post more links related to class topics, or other interesting nuggets.
