how to reconnect

--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -7,6 +7,8 @@ This page links to resources that might be interesting or useful during class. I
 
 Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-DIIF-2025-08-18.pptx) for the week.
 
+**In case of an extended interruption to the class Teams session, return here for notes on getting back into the session.**
+
 ### Monday August 25
 
 - If there's anything examiners know, it's that having a plan is important. It's good to learn that [**Microsoft knows this too**](https://cyberscoop.com/microsoft-threat-intel-response-tips/).
