--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -14,3 +14,4 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 - If there's anything examiners know, it's that having a plan is important. It's good to learn that [**Microsoft knows this too**](https://cyberscoop.com/microsoft-threat-intel-response-tips/).
 - Here's another [**a bit of easy pre-reading**](https://www.sayers.com/articles/the-future-of-firewalls-engineering-experts-reveal-the-path-ahead/) if you'd like to see where we're headed.
+- Don sent along [**this neat article**](https://www.isaca.org/resources/news-and-trends/industry-news/2025/the-reality-of-ai-oversold-and-underdelivered) from ISACA about the confusing state of AI and it's relationship to IT trust.
