monday class updats

--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -17,6 +17,9 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 - Don sent along [**this neat article**](https://www.isaca.org/resources/news-and-trends/industry-news/2025/the-reality-of-ai-oversold-and-underdelivered) from ISACA about the confusing state of AI and it's relationship to IT trust.
 - We looked at [**What is my IP?**](https://www.whatismyip.com/) which is a great site for innocently poking around your personal IP address space.
 - It's not particularly user-friendly, but here's [**the NMAP application**](https://nmap.org/) I showed you today. There are many other, more capable network port scanners out there; I like **nmap** because its output is clear and easy to read.
-- I told you not to worry about DHCP attacks. Maybe I [**spoke too soon**](https://arstechnica.com/security/2024/05/novel-attack-against-virtually-all-vpn-apps-neuters-their-entire-purpose/).
+- I told you not to worry about DHCP attacks. Maybe I [**spoke too soon**](https://www.ipvanish.com/blog/tunnelvision-vpn-vulnerability/).
 - If you don't understand why perimeter-centric, firewall-only security is old and busted, and what banks need to do about it, [**please read this**](https://www.sdxcentral.com/security/zero-trust/definitions/what-is-zero-trust-network-access-ztna/) - it's just one of many good ZTNA explainers for mortals. If you're feeling super-human and you want more detail from a federal perspectective, [**please be my guest**](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-207.pdf).
 - We had to blow past it pretty fast today, so here is [**a great article**](https://sookocheff.com/post/networking/how-does-tcp-work/) about how TCP does its amazing job.
+
+### Tuesday August 26
+
