--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -18,7 +18,7 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 - We looked at [**What is my IP?**](https://www.whatismyip.com/) which is a great site for innocently poking around your personal IP address space.
 - It's not particularly user-friendly, but here's [**the NMAP application**](https://nmap.org/) I showed you today. There are many other, more capable network port scanners out there; I like **nmap** because its output is clear and easy to read.
 - I told you not to worry about DHCP attacks. Maybe I [**spoke too soon**](https://www.ipvanish.com/blog/tunnelvision-vpn-vulnerability/).
-- If you don't understand why perimeter-centric, firewall-only security is old and busted, and what banks need to do about it, [**please read this**](https://www.sdxcentral.com/security/zero-trust/definitions/what-is-zero-trust-network-access-ztna/) - it's just one of many good ZTNA explainers for mortals. If you're feeling super-human and you want more detail from a federal perspectective, [**please be my guest**](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-207.pdf).
+- If you don't understand why perimeter-centric, firewall-only security is old and busted, and what banks need to do about it, [**please read this**](https://www.crowdstrike.com/en-us/cybersecurity-101/zero-trust-security/) - it's just one of many good ZTNA explainers for mortals (Okay, it's from CrowdStrike, but that's probably okay. If you're feeling super-human and you want more detail from a federal perspectective, [**please be my guest**](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-207.pdf).
 - We had to blow past it pretty fast today, so here is [**a great article**](https://sookocheff.com/post/networking/how-does-tcp-work/) about how TCP does its amazing job.
 
 ### Tuesday August 26
