--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -14,7 +14,7 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 - If there's anything examiners know, it's that having a plan is important. It's good to learn that [**Microsoft knows this too**](https://cyberscoop.com/microsoft-threat-intel-response-tips/).
 - Here's another [**a bit of easy pre-reading**](https://www.sayers.com/articles/the-future-of-firewalls-engineering-experts-reveal-the-path-ahead/) if you'd like to see where we're headed.
-- Don sent along [**this neat article**](https://www.isaca.org/resources/news-and-trends/industry-news/2025/the-reality-of-ai-oversold-and-underdelivered) from ISACA about the confusing state of AI and it's relationship to IT trust.
+- Don sent along [**this neat article**](https://www.isaca.org/resources/news-and-trends/industry-news/2025/the-reality-of-ai-oversold-and-underdelivered) from ISACA about the confusing state of AI and its relationship to IT trust.
 - We looked at [**What is my IP?**](https://www.whatismyip.com/) which is a great site for innocently poking around your personal IP address space.
 - It's not particularly user-friendly, but here's [**the NMAP application**](https://nmap.org/) I showed you today. There are many other, more capable network port scanners out there; I like **nmap** because its output is clear and easy to read.
 - I told you not to worry about DHCP attacks. Maybe I [**spoke too soon**](https://www.ipvanish.com/blog/tunnelvision-vpn-vulnerability/).
