--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -19,11 +19,19 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 - It's not particularly user-friendly, but here's [**the NMAP application**](https://nmap.org/) I showed you today. There are many other, more capable network port scanners out there; I like **nmap** because its output is clear and easy to read.
 - I told you not to worry about DHCP attacks. Maybe I [**spoke too soon**](https://www.ipvanish.com/blog/tunnelvision-vpn-vulnerability/).
 - If you don't understand why perimeter-centric, firewall-only security is old and busted, and what banks need to do about it, [**please read this**](https://www.crowdstrike.com/en-us/cybersecurity-101/zero-trust-security/) - it's just one of many good ZTNA explainers for mortals (Okay, it's from CrowdStrike, but that's probably okay, they're good folks.) If you're feeling super-human and you want more detail from a federal perspectective, [**please be my guest**](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-207.pdf).
-- We had to blow past it pretty fast today, so here is [**a great article**](https://sookocheff.com/post/networking/how-does-tcp-work/) about how TCP does its amazing job.
+- We had to blow past it pretty quickly today, so here is [**a great article**](https://sookocheff.com/post/networking/how-does-tcp-work/) about how TCP does its amazing job.
 
 ### Tuesday August 26
 
 - Bouncing off today's first exercise, here are some ideas for [**questions about firewalls and network security**](https://class.hillvt.com/assets/Firewall-question-ideas.docx) that might help you to develop or tighten up your own.
 - As we've noted, firewalls are far from the final word on network security these days. [**Here's a decent article from SentinelOne**](https://www.sentinelone.com/cybersecurity-101/xdr/understanding-the-difference-between-edr-siem-soar-and-xdr/) about some more advanced approaches and what they bring to the table.
-
+- For our "Find a Firewall" exercise:
+  - [**Here's the topology**](https://boingit.com/fdic/fdic-diif/faf.png)
+- And here are some links to the vendors:
+  - [**Fortinet**](https://www.fortinet.com/products/next-generation-firewall)
+  - [**Palo Alto**](https://www.paloaltonetworks.com/network-security/next-generation-firewall-hardware)
+  - [**SonicWall**](https://www.sonicwall.com/products/firewalls/)
+  - [**Barracuda**](https://www.barracuda.com/products/network-protection/secureedge/next-generation-security)
+  - [**Cisco**](https://www.cisco.com/site/us/en/products/security/firewalls/index.html)
+- You don't have to use these links, I'm providing them as shortcuts to what seem to be the best sources of information for the exercise. You can look for, research, and use any platform from your vendor that you think fits the need.
 
