Tuesday class updates

--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -34,4 +34,10 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
   - [**Barracuda**](https://www.barracuda.com/products/network-protection/secureedge/next-generation-security)
   - [**Cisco**](https://www.cisco.com/site/us/en/products/security/firewalls/index.html)
 - You don't have to use these links, I'm providing them as shortcuts to what seem to be the best sources of information for the exercise. You can look for, research, and use any platform from your vendor that you think fits the need.
+- This is not brand-new, but it's [**a good list of network risks**](https://bankingjournal.aba.com/2024/02/seven-cybersecurity-threats-for-banks-in-2024-and-some-smart-precautions/) for banks and related companies.
+- Fortinet has a similar list that's [**focused on solutions they provide**](https://www.fortinet.com/solutions/industries/financial-services/types-of-cyberattacks-on-financial-institutions), but hey, I guess you can't blame them for that. 
+- This is the [**Verizon Data Breach Investigation Report**](https://www.verizon.com/business/resources/reports/dbir/). I'm not shilling for Verizon, but it is an awesome resource, updated yearly, and it's free if you register to read it. I would read it!
 
+### Wednesday August 27
+
+- 
