--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -41,3 +41,5 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 ### Wednesday August 27
 
 - As you saw in yesterday's exercise, firewalls can do lots of different things these days. Here's a list of some ways [**firewalls can serve as network security**](https://class.hillvt.com/assets/Firewall-Controls.docx) controls. 
+- Here's a link to the [**Sonicwall Live Demo site**](https://livedemo.sonicwall.com/). Have fun, and you can learn a lot!
+
