--- a/_posts/2025-08-10-diif.md
+++ b/_posts/2025-08-10-diif.md
@@ -42,4 +42,4 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 - As you saw in yesterday's exercise, firewalls can do lots of different things these days. Here's a list of some ways [**firewalls can serve as network security**](https://class.hillvt.com/assets/Firewall-Controls.docx) controls. 
 - Here's a link to the [**Sonicwall Live Demo site**](https://livedemo.sonicwall.com/). Have fun, and you can learn a lot!
-
+- For the "Bank Firewall Topologies" exercise I somehow forgot the topologies. [**So here they are**](https://boingit.com/firewalls/assets/bank_topos.png).
