first Monday update

--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -16,3 +16,11 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 - Remember that ~~great~~ horrible day in October 2021 when all of Meta's properties (meaning Facebook/Insta/WhatsApp/etc) disappeared from the internet for about 6 hours? [**This is why that happened.**](https://blog.cloudflare.com/october-2021-facebook-outage/) The article is pretty detailed, and you probably won't grok it all quite yet, but a quick scan might give you some ideas. By the time we're through with class, you'll know enough to understand most of it. What if it had not been Meta, but a Core Banking Service Provider who had suffered this fate? Could that happen?
 
 - Banks and everyone else have been moving apps to the cloud for many reasons, but this article explains why [**the mainframe computer isn't going anywhere**](https://arstechnica.com/information-technology/2023/07/the-ibm-mainframe-how-it-runs-and-why-it-survives/), at least for a while. What might the networking consequences of this fact be, for security, availability, or other reasons?
+
+### Tuesday October 21
+
+- [Downdetector](https://downdetector.com/) is a great way to know if it's you or them that's having problems.
+
+- Yesterday's [AWS Outage](https://health.aws.amazon.com/health/status) was bad. It will probably take a couple of days to know exactly how bad, but in the meantime there's plenty of speculation from outfits like [El Reg](https://www.theregister.com/2025/10/20/amazon_aws_outage/?td=rt-3a), [Wired](https://www.wired.com/story/what-that-huge-aws-outage-reveals-about-the-internet/), and [Tom's Guide](https://www.tomsguide.com/tech/how-the-aws-outage-happened-and-why-its-breaking-the-internet).
+
+
