first Monday update

--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -19,10 +19,10 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 ### Tuesday October 21
 
-- [Downdetector](https://downdetector.com/) is a great way to know if it's you or them that's having problems.
+- [Downdetector](https://downdetector.com/) is a great way to know if it's you or them that are having problems.
 
 - Yesterday's [AWS Outage](https://health.aws.amazon.com/health/status) was bad. It will probably take a couple of days to know exactly how bad, but in the meantime there's plenty of speculation from outfits like [El Reg](https://www.theregister.com/2025/10/20/amazon_aws_outage/?td=rt-3a), [Wired](https://www.wired.com/story/what-that-huge-aws-outage-reveals-about-the-internet/), and [Tom's Guide](https://www.tomsguide.com/tech/how-the-aws-outage-happened-and-why-its-breaking-the-internet). It does seem to have been caused by [a problem with their DynamoDB system](https://www.networkworld.com/article/4075446/aws-dns-error-hits-dynamodb-causing-problems-for-multiple-services-and-customers.html), which supports their DNS. 
 
-
+- This was the worst wide-scale internet outage since last year's [Crowdstrike / Windows update](https://www.reuters.com/technology/global-cyber-outage-grounds-flights-hits-media-financial-telecoms-2024-07-19/) issue borked things up for a while.
 
 
