first Monday update

--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -25,4 +25,4 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 - This was the worst wide-scale internet outage since last year's [Crowdstrike / Windows update](https://www.reuters.com/technology/global-cyber-outage-grounds-flights-hits-media-financial-telecoms-2024-07-19/) issue borked things up for a while.
 
-
+- Here's the homepage of my little ISP in Northern Vermont: [**Mansfield Community Fiber**](https://mcfibervt.com). Is there any risk in a small bank using a startup ISP like this, and not, say, AT&T, Verizon, or Comcast?
