--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -26,3 +26,5 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 - This was the worst wide-scale internet outage since last year's [Crowdstrike / Windows update](https://www.reuters.com/technology/global-cyber-outage-grounds-flights-hits-media-financial-telecoms-2024-07-19/) issue borked things up for a while.
 
 - Here's the homepage of my little ISP in Northern Vermont: [**Mansfield Community Fiber**](https://mcfibervt.com). Is there any risk in a small bank using a startup ISP like this, and not, say, AT&T, Verizon, or Comcast?
+
+- I mentioned DHCP (Dynamic Host Configuraton Protocol). It's a fundamental part of every network you've ever seen, and it's always been considered solid and secure. For now, [this might interest you](https://www.bleepingcomputer.com/news/security/new-tunnelvision-attack-leaks-vpn-traffic-using-rogue-dhcp-servers/), which we'll talk about on Wednesday.
