--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -27,4 +27,6 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 - Here's the homepage of my little ISP in Northern Vermont: [**Mansfield Community Fiber**](https://mcfibervt.com). Is there any risk in a small bank using a startup ISP like this, and not, say, AT&T, Verizon, or Comcast?
 
-- I mentioned DHCP (Dynamic Host Configuraton Protocol). It's a fundamental part of every network you've ever seen, and it's always been considered solid and secure. For now, [this might interest you](https://www.bleepingcomputer.com/news/security/new-tunnelvision-attack-leaks-vpn-traffic-using-rogue-dhcp-servers/), which we'll talk about on Wednesday.
+### Wednesday October 22
+
+- Yesterday I mentioned [**DHCP** (Dynamic Host Configuraton Protocol)](https://en.wikipedia.org/wiki/Dynamic_Host_Configuration_Protocol). It's a fundamental part of every network you've ever seen, and it's always been considered solid and secure. For now, [this might interest you](https://www.bleepingcomputer.com/news/security/new-tunnelvision-attack-leaks-vpn-traffic-using-rogue-dhcp-servers/), which we'll talk about a bit on Wednesday.
