--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -30,3 +30,9 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 ### Wednesday October 22
 
 - Yesterday I mentioned [**DHCP** (Dynamic Host Configuraton Protocol)](https://en.wikipedia.org/wiki/Dynamic_Host_Configuration_Protocol). It's a fundamental part of every network you've ever seen, and it's always been considered solid and secure. For now, [this might interest you](https://www.bleepingcomputer.com/news/security/new-tunnelvision-attack-leaks-vpn-traffic-using-rogue-dhcp-servers/), which we'll talk about a bit on Wednesday.
+
+- Wednesday afternoon exercise diagrams:
+ - [Group 1](https://class.hillvt.com/assets/A-bank.pdf): Anastasia, Walker, Han, Taylor
+ - Group 2: Sadia, Brandon, Brandon, Billy, Travis
+ - Group 3: Andrew, Andrew, Jack, Daniel, Rafael, 
+ - Group 4: Jess, Jose, Kristen, Kade
