--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -33,6 +33,6 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 - Wednesday afternoon exercise diagrams:
  - [Group 1](https://class.hillvt.com/assets/A-bank.pdf): Anastasia, Walker, Han, Taylor
- - Group 2: Sadia, Brandon, Brandon, Billy, Travis
- - Group 3: Andrew, Andrew, Jack, Daniel, Rafael, 
- - Group 4: Jess, Jose, Kristen, Kade
+ - [Group 2](https://class.hillvt.com/assets/B-bank.pdf): Sadia, Brandon, Brandon, Billy, Travis
+ - [Group 3](https://class.hillvt.com/assets/C-bank.jpg): Andrew, Andrew, Jack, Daniel, Rafael, 
+ - [Group 4](https://class.hillvt.com/assets/D-bank.pdf): Jess, Jose, Kristen, Kade
