--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -36,3 +36,11 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
   - [Group 2](https://class.hillvt.com/assets/B-bank.pdf): Sadia, Brandon, Brandon, Billy, Travis
   - [Group 3](https://class.hillvt.com/assets/C-bank.jpg): Andrew, Andrew, Jack, Daniel, Rafael, 
   - [Group 4](https://class.hillvt.com/assets/D-bank.pdf): Jess, Jose, Kristen, Kade
+
+#### Questions to consider
+  - How does your bank access the internet?
+  - How do they connect their locations or branches?
+  - Do they use any cloud services?
+  - Do they offer remote access?
+  - What else of interest do you see? 
+  - Does anything make you go huh?
