--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -44,3 +44,8 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
   - Do they offer remote access?
   - What else of interest do you see? 
   - Does anything make you go huh?
+
+### Thursday October 23
+
+- [**Cradlepoint**](https://cradlepoint.com/) (now owned by Ericsson) does lots of stuff, but they got their start making [**cellular failover devices and services**](https://cradlepoint.com/products/branch/branch-continuity/) for bank branches and others that need better uptime then they could get from their fixed internet service alone. We saw their devices in at least one of the topologies we looked at yesterday.
+
