--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -51,5 +51,9 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 -  Don't forget the very useful [What is My IP Address](https://www.whatismyip.com/) for figuring out your external IP address. How do you find your "internal" IP address?
 
+- Here is [**a great article**](https://sookocheff.com/post/networking/how-does-tcp-work/) about how TCP does its amazing job.
+
+- Here's a clear and simple discussion of some aspects of [**Public Key Cryptography**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) from Cloudflare. In fact, if you mouse around a bit on that page, you'll find many good explainers for various aspects of cybersecurity.
+
 
 
