--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -35,7 +35,7 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
   - [Group 1](https://class.hillvt.com/assets/A-bank.pdf): Anastasia, Walker, Han, Taylor
   - [Group 2](https://class.hillvt.com/assets/B-bank.pdf): Sadia, Brandon, Brandon, Billy, Travis
   - [Group 3](https://class.hillvt.com/assets/C-bank.jpg): Andrew, Andrew, Jack, Daniel, Rafael
-  - [Group 4](https://class.hillvt.com/assets/D-bank.pdf): Jess, Jose, Kristen, Kade
+  - [Group 4](https://class.hillvt.com/assets/D-bank.pdf): Jesse, Jose, Kristen, Kade
 
 #### Questions to consider
   - How does your bank access the internet?
