--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -55,5 +55,7 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 
 - Here's a clear and simple discussion of some aspects of [**Public Key Cryptography**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) from Cloudflare. In fact, if you mouse around a bit on that page, you'll find many good explainers for various aspects of cybersecurity.
 
+### Friday October 24
 
-
+- As we discussed yesterday, banks (and everyone) have many alternatives to using the "standard" DNS provided by their ISP. [Cloudflare's DNS](https://one.one.one.one/) is particularly famous, and has options for app-centric use, as well as different levels of protection from malware, objectionable content, and more. Google has a similar service at 8.8.8.8 as we saw.[Lifewire](https://www.lifewire.com/free-and-public-dns-servers-2626062) has a decent article about how and why to do this, but you can also just Google "DNS services" and see lots of other info.
+- 
