--- a/_posts/2025-10-01-ITT.md
+++ b/_posts/2025-10-01-ITT.md
@@ -58,4 +58,5 @@ Here's a [**link to the PowerPoint file**](https://class.hillvt.com/assets/FDIC-
 ### Friday October 24
 
 - As we discussed yesterday, banks (and everyone) have many alternatives to using the "standard" DNS provided by their ISP. [Cloudflare's DNS](https://one.one.one.one/) is particularly famous, and has options for app-centric use, as well as different levels of protection from malware, objectionable content, and more. Google has a similar service at 8.8.8.8 as we saw yesterday. [Lifewire](https://www.lifewire.com/free-and-public-dns-servers-2626062) has a decent article about how and why to do this, but you can also just Google "DNS services" and see lots of other info.
-- 
+
+- The geekier of you may enjoy this pretty cool article by Hussein Nasser on [what happens when you click a link](https://medium.com/@hnasr/the-networking-behind-clicking-a-link-b2ce36b7cf14). Many of the protocols we've discussed this week are mentioned, and you can see how they work in context.
